[package]
name = "wpskim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
url = "2.3.1"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
loading = "0.3.0"
